# experimental

./: .gitignore  README.md  pyproject.toml  setup.py
experimental/: __init__.py  _late_bound_arg_defaults_impl.py  _peekable.py
scripts/: bench.py  bench_late_bound_arg_defaults.py  bench_lazy_import.py
src/__experimental__/: __init__.py  _ast_helpers.py  _base.py  _core.py  _import_token_finder.py  _inline_import.py  _late_bound_arg_defaults.py  _late_bound_arg_defaults_impl.py  _lazy_import.py  _main.py  _misc.py  _peekable.py  _token_helper.py  _token_helpers.py  _typing_compat.py  _utils.py  base.py
src/__experimental__/_features/: __init__.py  elide_cast.py  inline_import.py  late_bound_arg_defaults.py  lazy_import.py
src/__experimental__/_utils/: __init__.py  ast_helpers.py  misc.py  peekable.py  token_helper.py  token_helpers.py
src/__experimental__/features/: _inline_import.py  _late_bound_arg_defaults.py
tests/: conftest.py  sample_late_bound_arg.py  test_elide_cast.py  test_experimental.py  test_inline_import.py  test_integration.py  test_late_bound_arg_defaults.py  test_lazy_import.py  test_lazy_module_import.py  test_utils.py
tests/features/: test_elide_cast.py  test_inline_import.py  test_late_bound_arg_defaults.py  test_lazy_import.py  test_utils.py
tests/late_bound_arg_defaults/: sample.py  test_behavior.py
tests/lazy_module_import/: test_behavior.py
tests/lazy_module_import/sample_pkg/: module1.py  module2.py
tests/pkg/: __init__.py  late_bound_arg_defaults_loader_example.py  test_late_bound_arg_defaults_loader.py
tests/sample_lazy_pkg/: module1.py  module2.py
